--- a/index.html
+++ b/index.html
@@ -286,9 +286,6 @@
         </div>
 
         <div class="gallery__showroom">
-          <div id="modal" class="modal">
-          </div>
-
           <div class="swiper-container swiper-container_gallery">
             <div class="swiper-wrapper swiper-wrapper_gallery">
               <div class="swiper-slide swiper-slide_gallery" data-author="author_1" data-artdirection="artdirection_1" data-arttechnique="arttechnique_1">
@@ -1111,69 +1108,69 @@
       <div class="container events__container">
         <h2 id="events" class="events__heading section-heading">События</h2>
 
-        <div class="swiper-container swiper-container_events">
-          <div class="swiper-wrapper swiper-wrapper_events">
-              <div class="swiper-slide swiper-slide_events events-card events-card_one">
+        <div class="events__swiper swiper-container events__swiper">
+          <div class="events__wrapper swiper-wrapper events__wrapper">
+              <div class="swiper-slide events-card events-card_one">
 
                 <div class="events-card__place">Музей им. Щусева</div>
 
                 <div class="events-card__date">с 20 марта по 30 апреля</div>
 
-                <p class="events-card__text">
-                  <span class="events-card__heading">Книжная гравюра в живом восприятии</span><br>Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат&nbsp;Давид и&nbsp;сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.
-                </p>
+                <h3 class="events-card__heading">Книжная гравюра в живом восприятии</h3>
+
+                <p class="events-card__text">Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат&nbsp;Давид и&nbsp;сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
               </div>
 
-              <div class="swiper-slide swiper-slide_events events-card events-card_two">
+              <div class="swiper-slide events-card events-card_two">
 
                 <div class="events-card__place">ММОМА</div>
 
                 <div class="events-card__date">24 марта 19:00</div>
 
-                <p class="events-card__text">
-                  <span class="events-card__heading">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</span><br>Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых принципов формирования. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых принципов формирования.
-                </p>
+                <h3 class="events-card__heading">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
+
+                <p class="events-card__text">Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых принципов формирования. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки новых принципов формирования.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
               </div>
 
-              <div class="swiper-slide swiper-slide_events events-card events-card_three">
+              <div class="swiper-slide events-card events-card_three">
 
                 <div class="events-card__place">Еврейский музей</div>
 
                 <div class="events-card__date">с 31 марта по 21 апреля</div>
 
-                <p class="events-card__text">
-                  <span class="events-card__heading">Выставка «Формация 2020»</span><br>Идейные соображения высшего порядка, а также современная методология разработки играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование играет определяющее значение для новых принципов формирования материально-технической и кадровой базы.
-                </p>
+                <h3 class="events-card__heading">Выставка «Формация 2020»</h3>
+
+                <p class="events-card__text">Идейные соображения высшего порядка, а также современная методология разработки играет важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование играет определяющее значение для новых принципов формирования материально-технической и кадровой базы.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
               </div>
 
-              <div class="swiper-slide swiper-slide_events events-card events-card_four">
+              <div class="swiper-slide events-card events-card_four">
 
                 <div class="events-card__place">Третьяковка на Крымском валу</div>
 
                 <div class="events-card__date">с 30 марта по 30 апреля</div>
 
-                <p class="events-card__text">
-                  <span class="events-card__heading">XXIV Международная биеннале молодого искусства</span><br>Внезапно, реплицированные с зарубежных источников, современные исследования представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть рассмотрены исключительно в разрезе маркетинговых и финансовых. Внезапно, реплицированные с зарубежных источников, современные исследования представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть рассмотрены исключительно в разрезе маркетинговых и финансовых.
-                </p>
+                <h3 class="events-card__heading">XXIV Международная биеннале молодого искусства</h3>
+
+                <p class="events-card__text">Внезапно, реплицированные с зарубежных источников, современные исследования представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть рассмотрены исключительно в разрезе маркетинговых и финансовых. Внезапно, реплицированные с зарубежных источников, современные исследования представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть рассмотрены исключительно в разрезе маркетинговых и финансовых.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
               </div>
 
-              <div class="swiper-slide swiper-slide_events events-card events-card_five">
+              <div class="swiper-slide events-card events-card_five">
 
                 <div class="events-card__place">ММАМ</div>
 
                 <div class="events-card__date">с 8 апреля по 20 мая</div>
 
-                <p class="events-card__text">
-                  <span class="events-card__heading">Джон Винзор. Фотографии из серии «Метафора серебра»</span><br>Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.
-                </p>
+                <h3 class="events-card__heading">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+                
+                <p class="events-card__text">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
               </div>
@@ -1308,9 +1305,9 @@
           </div>
         </form>
 
-        <div class="swiper-container_publication">
-          <div class="swiper-wrapper_publication">
-              <article class="swiper-slide_publication publication-card">
+        <div class="publication__swiper">
+          <div class="publication__wrapper">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3_optimized.jpg 3x">
 
@@ -1330,7 +1327,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-1_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-1_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-1_optimized.jpg 3x">
 
@@ -1350,7 +1347,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-2_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-2_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-2_optimized.jpg 3x">
 
@@ -1370,7 +1367,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-3_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-3_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-3_optimized.jpg 3x">
 
@@ -1390,7 +1387,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-4_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-4_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-4_optimized.jpg 3x">
 
@@ -1410,7 +1407,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-5_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-5_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-5_optimized.jpg 3x">
 
@@ -1430,7 +1427,7 @@
                 <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
               </article>
 
-              <article class="swiper-slide_publication publication-card">
+              <article class="publication__slide publication-card">
                 <picture class="publication-card__img" >
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-6_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-6_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-6_optimized.jpg 3x">
 
@@ -1500,7 +1497,7 @@
         <h3 class="projects__subheading">Партнёры проектов:</h3>
 
         <div class="project-swiper">
-          <div class="swiper-container_projects swiper-container">
+          <div class="swiper-container swiper-container_projects">
             <div class="swiper-wrapper swiper-wrapper_projects">
                 <div class="swiper-slide swiper-slide_projects">
                   <a class="projects__card" href="#">
@@ -1632,6 +1629,8 @@
       </ul>
     </div>
   </footer>
+
+  <div id="modal" class="modal"></div>
 
   <div class="message none" aria-hidden="true">Данные успешно отправлены</div>
 </body>
