--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
                 <div class="events-card__date">с 8 апреля по 20 мая</div>
 
                 <h3 class="events-card__heading">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
-                
+
                 <p class="events-card__text">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело.</p>
 
                 <a class="events-card__link" href="#">Подробнее</a>
@@ -1308,7 +1308,7 @@
         <div class="publication__swiper">
           <div class="publication__wrapper">
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-1_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-1_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-1_optimized.jpg 3x">
@@ -1324,11 +1324,11 @@
 
                 <p class="publication-card__price">620 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-1_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-1_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-1_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3_optimized.jpg 3x">
@@ -1344,11 +1344,11 @@
 
                 <p class="publication-card__price">2 450 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-2_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-2_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-2_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-6_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-6_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-6_optimized.jpg 3x">
@@ -1364,11 +1364,11 @@
 
                 <p class="publication-card__price">2 200 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-3_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-3_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-3_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-2_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-2_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-2_optimized.jpg 3x">
@@ -1384,11 +1384,11 @@
 
                 <p class="publication-card__price">1 100 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-4_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-4_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-4_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-3_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-3_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-3_optimized.jpg 3x">
@@ -1404,11 +1404,11 @@
 
                 <p class="publication-card__price">1 450 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-5_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-5_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-5_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-4_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-4_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-4_optimized.jpg 3x">
@@ -1424,11 +1424,11 @@
 
                 <p class="publication-card__price">3 200 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
 
               <article class="publication__slide publication-card">
-                <picture class="publication-card__img" >
+                <picture>
                   <source media="(min-width: 1920px)" srcset="pictures/publication/xl/rectangle-111-xl@x1-6_optimized.jpg 1x, pictures/publication/xl/rectangle-111-xl@x2-6_optimized.jpg 2x, pictures/publication/xl/rectangle-111-xl@x3-6_optimized.jpg 3x">
 
                   <source media="(min-width: 1024px)" srcset="pictures/publication/l/rectangle-111-l@x1-5_optimized.jpg 1x, pictures/publication/l/rectangle-111-l@x2-5_optimized.jpg 2x, pictures/publication/l/rectangle-111-l@x3-5_optimized.jpg 3x">
@@ -1444,7 +1444,7 @@
 
                 <p class="publication-card__price">2 200 руб</p>
 
-                <button class="publication-card__btn ovalbtn_style" type="button">Заказать</button>
+                <button class="publication-card__btn ellipsebtn_style" type="button">Заказать</button>
               </article>
           </div>
 
@@ -1468,7 +1468,7 @@
           <p class="projects__text">Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно-пропагандистское</p>
 
           <div class="tooltip">
-            <button class="tooltip__btn" aria-labelledby="tooltip-label__one">i</button>
+            <button class="tooltip__btn" aria-labelledby="tooltip-label__one"></button>
 
             <span class="tooltip__desc" role="tooltip" id="tooltip-label__one">Пример современных тенденций - современная методология разработки</span>
           </div>
@@ -1476,7 +1476,7 @@
           <p class="projects__text">обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть рассмотрены</p>
 
           <div class="tooltip">
-            <button class="tooltip__btn" aria-labelledby="tooltip-label__two">i</button>
+            <button class="tooltip__btn" aria-labelledby="tooltip-label__two"></button>
 
             <span class="tooltip__desc" role="tooltip" id="tooltip-label__two">Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции</span>
           </div>
@@ -1484,7 +1484,7 @@
           <p class="projects__text">исключительно в разрезе маркетинговых и финансовых</p>
 
           <div class="tooltip">
-            <button class="tooltip__btn" aria-labelledby="tooltip-label__tree">i</button>
+            <button class="tooltip__btn" aria-labelledby="tooltip-label__tree"></button>
 
             <span class="tooltip__desc" role="tooltip" id="tooltip-label__tree">В стремлении повысить качество </span>
           </div>
@@ -1563,15 +1563,13 @@
     </section>
 
     <section class="contacts">
-      <h2 id="contacts" class="section-heading contacts__heading">Контакты</h2>
+      <h2 id="contacts" class="contacts__heading">Контакты</h2>
 
       <div class="contacts__container">
         <address class="contacts__adress">
           <p class="contacts__showroom">Шоурум №2</p>
           <p class="contacts__street">Покровский бульвар, дом 24, строение 3</p>
         </address>
-
-        <div id="map" class="contacts__map"></div>
 
         <form id="subscribe" class="feedback-form" name="contactUs">
           <h3 class="feedback-form__heading">Заказать обратный звонок</h3>
@@ -1588,7 +1586,7 @@
             <input class="feedback-form__item item_tel" type="tel" name="phoneNumber" data-validate-field="phoneNumber" placeholder="Телефон*" required>
           </label>
 
-          <button class="feedback-form__btn ovalbtn_style" type="submit">Заказать</button>
+          <button class="feedback-form__btn ellipsebtn_style" type="submit">Заказать</button>
         </form>
 
         <div class="contacts__social">
@@ -1605,6 +1603,8 @@
           </ul>
         </div>
       </div>
+
+      <div id="map" class="contacts__map"></div>
     </section>
   </main>
 
