--- a/index.html
+++ b/index.html
@@ -710,11 +710,11 @@
             </div>
 
             <div class="swiper-contr">
-              <div class="swiper-button-prev_gallery"></div>
+              <div class="swiper-button-prev_gallery prev__btn"></div>
 
-              <div class="swiper-pagination_gallery"></div>
+              <div class="pagination swiper-pagination_gallery"></div>
 
-              <div class="swiper-button-next_gallery"></div>
+              <div class="swiper-button-next_gallery next-btn"></div>
             </div>
           </div>
         </div>
@@ -1449,11 +1449,11 @@
           </div>
 
           <div class="swiper-controls_publication">
-            <div class="swiper-button-prev_publication"></div>
+            <div class="prev__btn swiper-button-prev_publication"></div>
 
-            <div class="swiper-pagination_publication"></div>
+            <div class="pagination swiper-pagination_publication"></div>
 
-            <div class="swiper-button-next_publication"></div>
+            <div class="next-btn swiper-button-next_publication"></div>
           </div>
         </div>
       </div>
@@ -1555,9 +1555,9 @@
             </div>
           </div>
 
-          <div class="swiper-button-prev_projects"></div>
+          <div class="prev__btn swiper-button-prev_projects"></div>
 
-          <div class="swiper-button-next_projects"></div>
+          <div class="next-btn swiper-button-next_projects"></div>
         </div>
       </div>
     </section>
@@ -1616,15 +1616,15 @@
 
       <ul class="social">
         <li class="social__item">
-          <a class="social__link input_style vk" href="https://vk.com/id597110410" target="_blank" aria-label="я в контакте" rel="noreferrer noopener"></a>
+          <a class="social__link input_style vk link" href="https://vk.com/id597110410" target="_blank" aria-label="я в контакте" rel="noreferrer noopener"></a>
         </li>
 
         <li class="social__item">
-          <a class="social__link input_style instagram" href="https://www.instagram.com/dmwebdev/" target="_blank" aria-label="я в instagram" rel="noreferrer noopener"></a>
+          <a class="social__link input_style instagram link" href="https://www.instagram.com/dmwebdev/" target="_blank" aria-label="я в instagram" rel="noreferrer noopener"></a>
         </li>
 
         <li class="social__item">
-          <a class="social__link input_style facebook" href="https://www.facebook.com/profile.php?id=100004634804576" target="_blank" aria-label="я в facebook" rel="noreferrer noopener"></a>
+          <a class="social__link input_style facebook link" href="https://www.facebook.com/profile.php?id=100004634804576" target="_blank" aria-label="я в facebook" rel="noreferrer noopener"></a>
         </li>
       </ul>
     </div>
